--- a/notebooks/01-EDA.ipynb
+++ b/notebooks/01-EDA.ipynb
@@ -2,22 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "approximate-penny",
+   "id": "controlled-weapon",
    "metadata": {},
    "source": [
-    "_Purpose_ of this notebook is Exploratary Data Analysis.\n",
-    "\n",
-    "_Contents_ of this notebooks is as follows:\n",
-    "\n",
-    "_Summary_ of key findings and decisions are as follows:\n",
-    "* There are three distinct classes in the brief that are human names, namely (puns unintended),artist, athelete, and office holder. Without explicit profession sometiumes supplied in parathensis within 'name' or additional contexts of external datasets, one's name should not contain information that reasonably and fairly implies one's profession. Therefore, when a profession is not included in the 'name' field, the designed model should only output a class called 'human names' rather than attempted prediction of profession based on whatever spurious associations or biases there may be in training data;\n",
-    "* The distribution includinng the few noted specificities in the supplied dataset will be _assumed_ to mirror distribution of the dataset that the ML application will be deployed on, i.e. what's expected of customers' input. The noted specificities include (1) presence of non-ascii words is highly uneven across classes; (2) names for classes plant and animal are mainly their scientific Latin names. If this assumption is violated, then collection of more diverse data points  should be pursued to ensure generalizability of the model."
+    "# 01 - Exploratory Data Analysis"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "organizational-variety",
+   "id": "dramatic-raise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "social-local",
+   "id": "convenient-sustainability",
    "metadata": {},
    "source": [
     "### 1. read in data"
@@ -45,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "proof-festival",
+   "id": "connected-rally",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "automated-bahrain",
+   "id": "loose-regular",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "parental-ultimate",
+   "id": "insured-reflection",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "developing-ethnic",
+   "id": "proprietary-affair",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nervous-offense",
+   "id": "happy-disability",
    "metadata": {},
    "source": [
     "### 2. initial check of data quality"
@@ -205,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "returning-saskatchewan",
+   "id": "under-folder",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "interim-lambda",
+   "id": "bibliographic-extreme",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "working-future",
+   "id": "curious-little",
    "metadata": {},
    "source": [
     "No null values or duplicates in data"
@@ -257,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "outstanding-toolbox",
+   "id": "looking-mileage",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "secure-richmond",
+   "id": "sharing-uniform",
    "metadata": {},
    "source": [
     "### 3. Initial examination of examples per class"
@@ -286,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "passing-character",
+   "id": "russian-firmware",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "related-trailer",
+   "id": "integral-radar",
    "metadata": {},
    "source": [
     "Same number of examples (40k) per class, except for the last class (30k examples)"
@@ -327,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "governing-plastic",
+   "id": "indie-needle",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "consolidated-mediterranean",
+   "id": "looking-window",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "timely-brunei",
+   "id": "logical-national",
    "metadata": {},
    "source": [
     "_Observations_:\n",
@@ -552,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "finnish-excerpt",
+   "id": "consecutive-amazon",
    "metadata": {},
    "source": [
     "### 4. Quantify the observed qualities of texts "
@@ -561,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "initial-pharmacy",
+   "id": "accessible-amplifier",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "running-champion",
+   "id": "realistic-diabetes",
    "metadata": {},
    "source": [
     "#### 4.1 Length of texts in names and whether the distribution varies across classes."
@@ -580,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "operational-advertiser",
+   "id": "parallel-skill",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "comprehensive-siemens",
+   "id": "studied-research",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "representative-analysis",
+   "id": "lightweight-referral",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "front-occasion",
+   "id": "lovely-malawi",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "black-portland",
+   "id": "ahead-jefferson",
    "metadata": {},
    "source": [
     "_Observations_:\n",
@@ -701,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "meaningful-gather",
+   "id": "focused-bridal",
    "metadata": {},
    "source": [
     "#### 4.2 Number of words in names and whether the distribution varies across classes."
@@ -710,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "forty-lesbian",
+   "id": "settled-qatar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dress-amount",
+   "id": "detailed-marketplace",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "authentic-numbers",
+   "id": "alone-limit",
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "imperial-roberts",
+   "id": "responsible-parallel",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "outstanding-painting",
+   "id": "earned-variance",
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "negative-premises",
+   "id": "failing-commercial",
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "capital-distributor",
+   "id": "realistic-tribe",
    "metadata": {},
    "source": [
     "Plant (and some Animals classes) in this dataset contain latin names, explaining the few, long words contained in their names. This should be noted - if the ML application expects customers to input colliqual plant or animal names, then labeled data with more similar names for these two classes would need to be collected, and this model to retrain. "
@@ -869,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informational-entry",
+   "id": "lined-geography",
    "metadata": {},
    "source": [
     "#### 4.3 Number of punctuations, digits, nonascii characters in names and whether the distribution varies across classes."
@@ -878,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "vanilla-accountability",
+   "id": "improving-bangladesh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "metallic-persian",
+   "id": "nuclear-coffee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "possible-assault",
+   "id": "baking-depression",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "provincial-bermuda",
+   "id": "familiar-minority",
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "cognitive-mercy",
+   "id": "digital-nashville",
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "expanded-brass",
+   "id": "acoustic-symbol",
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proved-outreach",
+   "id": "derived-plastic",
    "metadata": {},
    "source": [
     "Numbers that exist in MeanOfTransportation seem to be mainly either part of a historical year, or make of the model."
@@ -1188,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "about-swedish",
+   "id": "dominant-infrastructure",
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "touched-reviewer",
+   "id": "after-disposition",
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stock-concord",
+   "id": "instrumental-paradise",
    "metadata": {},
    "source": [
     "The significantly higher presence of non-ascii characters in village, and overall uneven distribution of that among most classes, is potentially an issue. A machine learning algorithm trained on the current dataset is very likely to overfit on the spurious association of presence of 'exotic' characters in village or natural place names, even though generally, there is nothing inherently more exotic about these entities compared to the others. However, if the particular use case of this ML application expects a consistently similar distribution to what's present in this dataset for some reason, then there may be a case this confounder (presence of non-ascii characters) can be exploited mindfully, under close review of ongoing data drift, though a reframing of the class names may be more fitting and future-proof."
@@ -1252,7 +1246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "foreign-vintage",
+   "id": "bacterial-present",
    "metadata": {},
    "source": [
     "#### 4.4 Detected language in names and whether the distribution varies across classes."
@@ -1261,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "dying-christopher",
+   "id": "psychological-referral",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "expressed-championship",
+   "id": "provincial-responsibility",
    "metadata": {},
    "source": [
     "Since TextBlob apparentlyy uses MyMemory API under the hood, which has a 1000 requests/ day limit. Given the magnitude of names in given dataset, it would not be feasible to use this library / API to detect language for all records. Source: https://mymemory.translated.net/doc/usagelimits.php\n",
@@ -1285,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "inclusive-bracket",
+   "id": "established-spyware",
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "southeast-berlin",
+   "id": "steady-peripheral",
    "metadata": {},
    "source": [
     "the quantity is still way beyond the daily quota, plus, it wouldn't be complete as some all-ascii names could still well be in a non-English language too. Park this route.\n"
@@ -1314,7 +1308,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "furnished-beginning",
+   "id": "controversial-gentleman",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1323,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "promotional-charger",
+   "id": "muslim-finger",
    "metadata": {},
    "source": [
     "[Nice to have]: try implementing language detection using other libraries and frameworks such as Polyglot, Chardet, Langdetect, guess_language, and langid (source: https://stackoverflow.com/questions/39142778/python-how-to-determine-the-language).\n",
@@ -1333,7 +1327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alternate-juice",
+   "id": "together-fortune",
    "metadata": {},
    "source": [
     "#### 4.5 Key words within brackets which contain key words that explicitly mention the genre"
@@ -1342,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "turned-reducing",
+   "id": "fixed-decimal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "exempt-marble",
+   "id": "rational-marketing",
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "aboriginal-artist",
+   "id": "executive-fifth",
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cathedral-fiber",
+   "id": "eight-export",
    "metadata": {},
    "source": [
     "_Observations_: \n",
@@ -1449,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "challenging-silence",
+   "id": "diagnostic-holly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "accepted-dinner",
+   "id": "permanent-finding",
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "recognized-sustainability",
+   "id": "reflected-intake",
    "metadata": {},
    "outputs": [],
    "source": [
