--- a/notebooks/02-EDA-NER.ipynb
+++ b/notebooks/02-EDA-NER.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "diverse-stupid",
+   "id": "measured-visitor",
+   "metadata": {},
+   "source": [
+    "# 02 - Exploratory Data Analysis (Named Entity Recognition using Spacy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "global-finland",
    "metadata": {},
    "source": [
     "### 1. Read in data"
@@ -11,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "velvet-russian",
+   "id": "frequent-power",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "level-demand",
+   "id": "municipal-seafood",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "challenging-local",
+   "id": "warming-assault",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "statistical-currency",
+   "id": "specific-hearing",
    "metadata": {},
    "source": [
     "### 2. Run SpaCy NER"
@@ -63,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "ranking-acrobat",
+   "id": "acknowledged-rental",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -117,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "incorrect-antenna",
+   "id": "molecular-cargo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "falling-reservoir",
+   "id": "every-armor",
    "metadata": {},
    "source": [
     "### 3. Analyses on NER results"
@@ -138,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "derived-sarah",
+   "id": "known-planner",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "knowing-producer",
+   "id": "norwegian-offense",
    "metadata": {},
    "source": [
     "_Observations_:\n",
@@ -260,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "missing-conditions",
+   "id": "gothic-validation",
    "metadata": {},
    "source": [
     "#### 3.1 Number of NER in each name?"
@@ -269,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "laughing-borough",
+   "id": "dietary-mixture",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "informal-prerequisite",
+   "id": "controversial-vampire",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "altered-adrian",
+   "id": "muslim-donor",
    "metadata": {},
    "source": [
     "_Observations_:\n",
@@ -349,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bibliographic-exhaust",
+   "id": "metropolitan-instrument",
    "metadata": {},
    "source": [
     "#### 3.2 Correlation (co-occurrence) between NER and classes?"
@@ -357,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "right-dutch",
+   "id": "institutional-forty",
    "metadata": {},
    "source": [
     "For convenience, analyze those with only one recognised NER"
@@ -366,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "perfect-simple",
+   "id": "negative-greene",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "linear-impossible",
+   "id": "complete-tanzania",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "relevant-kennedy",
+   "id": "tested-smooth",
    "metadata": {},
    "source": [
     "_Observations_:\n",
@@ -423,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dangerous-township",
+   "id": "super-pitch",
    "metadata": {},
    "source": [
     "#### 3.3 Look at explanations of the NER labels"
@@ -432,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "shared-stopping",
+   "id": "innovative-request",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fitting-strength",
+   "id": "burning-subject",
    "metadata": {},
    "source": [
     "_Observations and Thoughts on Modeling_:\n",
@@ -474,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stone-fifth",
+   "id": "loaded-scout",
    "metadata": {},
    "source": [
     "#### 3.4 Extract all NER labels from each name, and discard the NER itself "
@@ -483,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "powerful-airline",
+   "id": "shared-cylinder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,93 +500,6 @@
     "df_features = df.copy()\n",
     "df_features['NER_labels'] = df_features['name'].apply(lambda x: [i.label_ for i in nlp(x).ents])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "electrical-dakota",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "mental-international",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "searching-german",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "rolled-republic",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def break_camel_formatted_phrase(text):\n",
-    "    return ' '.join(re.findall('[A-Z][^A-Z]*', text))\n",
-    "\n",
-    "def format_class_name(text):\n",
-    "    return break_camel_formatted_phrase(text).lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "violent-configuration",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "classes_list['class_name'] = classes_list['class_name'].apply(lambda x: format_class_name(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "anticipated-checkout",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc = nlp(','.join(classes_list['class_name'].tolist()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "noted-rogers",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "company,educational institution,artist,athlete,office holder,mean of transportation,building,natural place,village,animal,plant,album,film,written work"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "doc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "circular-january",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
