--- a/notebooks/03-model1-baseline.ipynb
+++ b/notebooks/03-model1-baseline.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "racial-third",
+   "metadata": {},
+   "source": [
+    "# 03 - model1 - baseline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "worth-importance",
+   "id": "unlimited-johnson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "understood-signal",
+   "id": "boolean-diploma",
    "metadata": {},
    "source": [
     "#### 1. Read in data"
@@ -35,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "distinct-edwards",
+   "id": "african-experiment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assisted-commerce",
+   "id": "limited-socket",
    "metadata": {},
    "source": [
     "####  2. Train, Validation, Test split"
@@ -54,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "competent-restaurant",
+   "id": "quantitative-burns",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "disabled-championship",
+   "id": "offshore-peeing",
    "metadata": {},
    "source": [
     "#### 3. Create features"
@@ -71,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sunset-singapore",
+   "id": "remarkable-explanation",
    "metadata": {},
    "source": [
     "##### 3.1. Simple statistical features already explored in EDA"
@@ -80,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "charming-douglas",
+   "id": "funky-saturn",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "falling-accused",
+   "id": "banned-soldier",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "colonial-invite",
+   "id": "united-effect",
    "metadata": {},
    "source": [
     "##### 3.2 keyword in brackets also explored in EDA"
@@ -125,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "civilian-starter",
+   "id": "accredited-large",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "minimal-crown",
+   "id": "isolated-touch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "attended-federal",
+   "id": "compact-patio",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impossible-transfer",
+   "id": "precise-twelve",
    "metadata": {},
    "source": [
     "##### 3.3 NER explored in EDA"
@@ -186,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "declared-colorado",
+   "id": "closing-adjustment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "appreciated-surge",
+   "id": "numeric-speaking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "grateful-slovenia",
+   "id": "harmful-paintball",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "powered-curtis",
+   "id": "unavailable-region",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "statewide-conjunction",
+   "id": "ahead-diary",
    "metadata": {},
    "source": [
     "#### 4. Prepare feature set"
@@ -275,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "earned-ethiopia",
+   "id": "running-valve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "different-accounting",
+   "id": "smart-realtor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decent-bangkok",
+   "id": "phantom-tenant",
    "metadata": {},
    "source": [
     "#### 5. Train xgboost"
@@ -306,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "environmental-support",
+   "id": "intellectual-engineer",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "horizontal-definition",
+   "id": "driven-speed",
    "metadata": {},
    "source": [
     "#### 6. Evaluate model"
@@ -351,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "billion-sugar",
+   "id": "prompt-guitar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "supposed-microphone",
+   "id": "imposed-scheme",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "helpful-alcohol",
+   "id": "persistent-matter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "dental-singer",
+   "id": "stable-support",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "cardiovascular-beauty",
+   "id": "present-condition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "opened-booth",
+   "id": "governing-angle",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "coordinate-night",
+   "id": "digital-competition",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "worse-suicide",
+   "id": "cubic-pointer",
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coastal-chicken",
+   "id": "flush-asset",
    "metadata": {},
    "outputs": [],
    "source": []
